<resources>
    <string name="app_name">PTRAC</string>

    <!-- Main menu -->
    <string name="action_about">¿Cómo funciona?</string>
    <string name="action_intro">Ver intro</string>

    <!-- Main buttons -->
    <string name="button_rut">Busqueda por RUT del propietario</string>
    <string name="button_address">Busqueda por dirección</string>
    <string name="button_chip">Busqueda por chip</string>
    <string name="button_qr">Busqueda por QR</string>
    <string name="button_info">Más información</string>

    <!-- Activities title -->
    <string name="title_activity_qr">Lector de QR</string>
    <string name="title_activity_rut">Búsqueda por RUT</string>
    <string name="title_activity_address">Búsqueda por Dirección</string>
    <string name="title_activity_chip">Búsquda por Chip</string>

    <!-- Activitiy RUT -->
    <string name="tv_rut">Ingrese el RUT del propietario</string>
    <string name="tv_sub_rut">sin puntos, con guión y digito verificador</string>
    <string name="rut_hint">123456789-0</string>

    <!-- Activitiy Chip -->
    <string name="tv_chip">Ingrese el numero de Chip del animal/mascota</string>
    <string name="tv_sub_chip">alguna sugerencia aqui?</string>
    <string name="chip_hint">1234</string>

    <!-- Activitiy Address -->
    <string name="tv_address">Ingrese la dirección del propietario</string>
    <string name="tv_sub_address">alguna sugerencia aqui?</string>
    <string name="address_hint">Llico 959, San Miguel, Santiago</string>

    <!-- Activitiy RUT -->
    <string name="qr_alert_message_ok">Continuar</string>
    <string name="qr_alert_message_nok">Cancelar</string>
    <string name="qr_alert_message">Resultado</string>

    <!-- Intro -->
    <string name="intro_fragment_1_title">Búsqueda por RUT</string>
    <string name="intro_fragment_2_title">Búsqueda por numero de chip</string>
    <string name="intro_fragment_3_title">Búsqueda por dirección del propietario</string>
    <string name="intro_fragment_4_title">Búsqueda por código QR</string>

    <string name="intro_fragment_1_description">Por medio del Ingreso del RUT del propietario de la mascota, podrá encontrar información</string>
    <string name="intro_fragment_2_description">Al ingresar el número de chip de la mascota, se mostrará información del propietario</string>
    <string name="intro_fragment_3_description">Ingresando la dirección del propietario, podrá encontrar información sobre las mascotas</string>
    <string name="intro_fragment_4_description">A través del escaneo de un codigo QR encontrará informacion en línea de la mascota</string>

    <!-- Activitiy About/Como funciona? -->
    <string name="title_activity_about">¿Cómo funciona?</string>
    <string name="title_activity_result">Resultado</string>
    <string name="title_activity_info">Mas Información</string>

    <!-- Card -->
    <string name="owner_data">Datos del responsable</string>
    <string name="no_data">No se encontraron resultados</string>

</resources>
