<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zecovery.android.mascotas.activity.QRActivity"
    tools:showIn="@layout/activity_main">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/green_400"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="Búsqueda por RUT"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageViewRut"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="24dp"
                    android:src="@mipmap/ic_launcher"
                    android:text="@string/button_rut" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/red_400"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="Búsqueda por dirección"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageViewAddress"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="24dp"
                    android:src="@mipmap/ic_launcher"
                    android:text="@string/button_address" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/blue_400"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="Búsqueda por Chip"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageViewChip"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="24dp"
                    android:src="@mipmap/ic_launcher"
                    android:text="@string/button_chip" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/amber_400"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="Búsqueda QR"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageViewQR"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="24dp"
                    android:src="@mipmap/ic_launcher"
                    android:text="@string/button_qr" />

            </LinearLayout>

        </LinearLayout>

    </TableRow>

</TableLayout>